--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <header>
       <!-- Nav -->
       <nav>
-        <a href="./index.html" class="logo">Web <span>Studio</span></a>
+        <a href="./index.html" class="logo"
+          >Web <span class="logo-dark">Studio</span></a
+        >
 
         <ul class="nav-item">
           <li><a href="./index.html" class="nav-list">Studio</a></li>
@@ -50,7 +52,7 @@
     <!-- Main -->
     <main>
       <!-- Hero -->
-      <section id="hero">
+      <section class="hero">
         <h1>
           Effective Solutions <br />
           for Your Business
@@ -58,7 +60,7 @@
         <button type="button">Order Service</button>
       </section>
       <!-- About us -->
-      <section id="about-us">
+      <section class="about-us">
         <h2>About us</h2>
         <ul class="about-us-container">
           <li class="about-us-item">
@@ -93,7 +95,7 @@
       </section>
 
       <!-- We doing -->
-      <section id="we-doing">
+      <section class="we-doing">
         <h2>What are we doing</h2>
         <ul class="we-doing-container">
           <li><img src="./images/desktop.jpg" alt="desktop" width="360" /></li>
@@ -109,7 +111,7 @@
       </section>
 
       <!-- Our Team -->
-      <section id="our-team">
+      <section class="our-team">
         <h2>Our Team</h2>
 
         <ul class="team-cards">
@@ -149,7 +151,9 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html" class="logo-white">Web <span> Studio</span></a>
+      <a href="./index.html" class="logo"
+        >Web <span class="logo-white"> Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
