--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
 
     <!-- Main -->
     <main>
-      <section id="filters">
+      <section class="filters">
         <ul class="filters-item">
           <li class="">
             <button type="button" class="filters-buttons">All</button>
@@ -63,7 +63,7 @@
           </li>
         </ul>
       </section>
-      <section id="portfolio">
+      <section class="portfolio">
         <ul class="portfolio-item">
           <li class="portfolio-list">
             <img
