--- a/portfolio.html
+++ b/portfolio.html
@@ -17,7 +17,9 @@
     <header>
       <!-- Nav -->
       <nav>
-        <a href="./index.html" class="logo">Web <span> Studio</span></a>
+        <a href="./index.html" class="logo"
+          >Web <span class="logo-dark"> Studio</span></a
+        >
 
         <ul class="nav-item">
           <li><a href="./index.html" class="nav-list">Studio</a></li>
@@ -130,7 +132,9 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html" class="logo-white">Web <span> Studio</span></a>
+      <a href="./index.html" class="logo"
+        >Web <span class="logo-white"> Studio</span></a
+      >
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
